# AgriTech-LIDAR

./: README.md  pyproject.toml
data/: pipline.json
notebook/: IA_FullState.laz  data_loader.ipynb
scripts/: data_loader.py  helper_methods.py  visualizer.py
