[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "nlidar"
version = "0.0.1"
authors = [
  { name="Nardos", email="nardostilahun83@gmail.com" },
]
description = "A package built on top of pdal package making it easier to fetch lidar data and visualize "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pdal ==3.1.2",
    "laspy ==2.1.2",
    "geopandas ==0.11.0",
]


[tool.setuptools.packages.find]
namespaces = true
where = ["src"]


[project.urls]
"Homepage" = "https://github.com/nardoshood/AgriTech-LIDAR"
"Bug Tracker" = "https://github.com/nardoshood/AgriTech-LIDAR/issues"